--- a/index.html
+++ b/index.html
@@ -13,8 +13,22 @@
   </head>
 
   <body>
-    <header>
-      <h1>Lezione css</h1>
+    <header class="stileheader">
+      <div class="logo">
+        <img src="./assets/immagini/logo.svg" alt="logo" />
+      </div>
     </header>
+
+    <main>
+      <section>
+        <h1>
+          Internet deve essere al servizio del "bene pubblico": il manifesto di
+          Tim Berners-Lee
+        </h1>
+        <address>
+          <p>Scritto da <a href="#">The Booleaner</a></p>
+        </address>
+      </section>
+    </main>
   </body>
 </html>
