+Immagini e paragrafo evidenziato

--- a/index.html
+++ b/index.html
@@ -20,14 +20,37 @@
     </header>
 
     <main>
-      <section>
+      <section class="sezionetitolo">
         <h1>
           Internet deve essere al servizio del "bene pubblico": il manifesto di
           Tim Berners-Lee
         </h1>
         <address>
-          <p>Scritto da <a href="#">The Booleaner</a></p>
+          <p>Scritto da <a class="stilelink" href="#">The Booleaner</a></p>
+          <p>il 10/10/2020</p>
         </address>
+      </section>
+
+      <figure>
+        <div class="sezioneimmaginiaffiancate">
+          <img src="./assets/immagini/tim-1.jpg" alt="Tim" />
+          <img src="./assets/immagini/tim-2.jpg" alt="Tim2" />
+        </div>
+        <figcaption>1a foto: Pinco Pallino bla bla</figcaption>
+        <figcaption>2a foto: Giovanni Rossi bla bla</figcaption>
+      </figure>
+
+      <section class="sezioneparagrafo">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          aspernatur officia qui velit dicta, minus
+          <mark>repellat consequatur natus consequuntur quibusdam et,</mark>
+          libero earum. Dolor harum provident earum inventore quaerat quod!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          aspernatur officia qui velit dicta, minus repellat consequatur natus
+          consequuntur quibusdam et, libero earum. Dolor harum provident earum
+          inventore quaerat quod!
+        </p>
       </section>
     </main>
   </body>
