--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
           inventore quaerat quod!
         </p>
       </section>
+
+      <section class="sezioneparagrafo">
+        <ul>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            dolorem autem recusandae voluptate quo eaque, ut amet. Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Doloremque dolorem
+            autem recusandae voluptate quo eaque, ut amet.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            dolorem autem recusandae voluptate quo eaque, ut amet. Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Doloremque dolorem
+            autem recusandae voluptate quo eaque, ut amet.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+            dolorem autem recusandae voluptate quo eaque, ut amet. Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Doloremque dolorem
+            autem recusandae voluptate quo eaque, ut amet.
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
