--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
   </head>
 
   <body>
+    <!-- HEADER -->
     <header class="stileheader">
       <div class="logo">
         <img src="./assets/immagini/logo.svg" alt="logo" />
       </div>
     </header>
-
+    <!-- CORPO -->
     <main>
+      <!-- TITOLO + CREDENZIALI -->
       <section class="sezionetitolo">
         <h1>
           Internet deve essere al servizio del "bene pubblico": il manifesto di
@@ -30,7 +32,7 @@
           <p>il 10/10/2020</p>
         </address>
       </section>
-
+      <!-- IMMAGINI -->
       <figure>
         <div class="sezioneimmaginiaffiancate">
           <img src="./assets/immagini/tim-1.jpg" alt="Tim" />
@@ -39,7 +41,7 @@
         <figcaption>1a foto: Pinco Pallino bla bla</figcaption>
         <figcaption>2a foto: Giovanni Rossi bla bla</figcaption>
       </figure>
-
+      <!-- PARAGRAFO -->
       <section class="sezioneparagrafo">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
@@ -52,7 +54,7 @@
           inventore quaerat quod!
         </p>
       </section>
-
+      <!-- LISTA -->
       <section class="sezioneparagrafo">
         <ul>
           <li>
@@ -74,6 +76,54 @@
             autem recusandae voluptate quo eaque, ut amet.
           </li>
         </ul>
+      </section>
+      <!-- TABELLA  -->
+      <section class="sezioneparagrafo">
+        <table>
+          <thead>
+            <tr>
+              <th>Lorem Ipsum Dolor</th>
+              <th>Lorem Ipsum Dolor</th>
+              <th colspan="2">Lorem Ipsum Dolor</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr class="rigaceleste">
+              <td>Lorem Ipsum Dolor</td>
+              <td>Lorem Ipsum Dolor</td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+                aliquam ab, porro accusantium nostrum iste quaerat provident
+                nemo suscipit ipsam at fuga ullam reprehenderit alias distinctio
+                tempore vero ducimus illum.
+              </td>
+            </tr>
+
+            <tr>
+              <td>Lorem Ipsum Dolor</td>
+              <td>Lorem Ipsum Dolor</td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+                aliquam ab, porro accusantium nostrum iste quaerat provident
+                nemo suscipit ipsam at fuga ullam reprehenderit alias distinctio
+                tempore vero ducimus illum.
+              </td>
+            </tr>
+
+            <tr class="rigaceleste">
+              <td>Lorem Ipsum Dolor</td>
+              <td>Lorem Ipsum Dolor</td>
+              <td>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+                aliquam ab, porro accusantium nostrum iste quaerat provident
+                nemo suscipit ipsam at fuga ullam reprehenderit alias distinctio
+                tempore vero ducimus illum.
+              </td>
+            </tr>
+          </tbody>
+          <tfoot></tfoot>
+        </table>
       </section>
     </main>
   </body>
