+ Tbella completa e paragrafo 2

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <tr>
               <th>Lorem Ipsum Dolor</th>
               <th>Lorem Ipsum Dolor</th>
-              <th colspan="2">Lorem Ipsum Dolor</th>
+              <th>Lorem Ipsum Dolor</th>
             </tr>
           </thead>
 
@@ -94,7 +94,7 @@
               <td>Lorem Ipsum Dolor</td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
-                aliquam ab, porro accusantium nostrum iste quaerat provident
+                aliquam ab, porro accusantium nostrum iste quaerat provident<br />
                 nemo suscipit ipsam at fuga ullam reprehenderit alias distinctio
                 tempore vero ducimus illum.
               </td>
@@ -105,7 +105,7 @@
               <td>Lorem Ipsum Dolor</td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
-                aliquam ab, porro accusantium nostrum iste quaerat provident
+                aliquam ab, porro accusantium nostrum iste quaerat provident<br />
                 nemo suscipit ipsam at fuga ullam reprehenderit alias distinctio
                 tempore vero ducimus illum.
               </td>
@@ -116,15 +116,30 @@
               <td>Lorem Ipsum Dolor</td>
               <td>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
-                aliquam ab, porro accusantium nostrum iste quaerat provident
+                aliquam ab, porro accusantium nostrum iste quaerat provident<br />
                 nemo suscipit ipsam at fuga ullam reprehenderit alias distinctio
                 tempore vero ducimus illum.
               </td>
             </tr>
           </tbody>
-          <tfoot></tfoot>
         </table>
       </section>
+
+      <!-- PARAGRAFO -->
+      <section class="sezioneparagrafo">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          aspernatur officia qui velit dicta, minus
+          <mark>repellat consequatur natus consequuntur quibusdam et,</mark>
+          libero earum. Dolor harum provident earum inventore quaerat quod!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          aspernatur officia qui velit dicta, minus repellat consequatur natus
+          consequuntur quibusdam et, libero earum. Dolor harum provident earum
+          inventore quaerat quod!
+        </p>
+      </section>
+
+      <section></section>
     </main>
   </body>
 </html>
