+ Immagini in basso

--- a/index.html
+++ b/index.html
@@ -139,7 +139,15 @@
         </p>
       </section>
 
-      <section></section>
+      <section>
+        <figure class="immaginealta">
+          <h3>Lorem</h3>
+        </figure>
+
+        <figure class="immaginebassa">
+          <h3>Lorem</h3>
+        </figure>
+      </section>
     </main>
   </body>
 </html>
