+ Settaggi sui Margini

--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
         </p>
       </section>
 
+      <!-- SEZIONE DOPPIA IMMAGINE -->
       <section>
+        <div class="sezioneparagrafo">
+          <h4>Potrebbero interessarti</h4>
+        </div>
         <figure class="immaginealta">
           <h3>Lorem</h3>
         </figure>
